--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -8103,10 +8103,12 @@ footer .item li .subscribe .subs {
 
 footer .item .logo {
   margin-bottom: 50px;
+  display: flex;
+    justify-content: space-around;
 }
 
 footer .item .logo img {
-  width: 50px;
+  width: 150px;
 }
 
 footer .item .social a {
@@ -9227,4 +9229,33 @@ section.next-prog.section-padding {
   a.col-md-12.popimg {
     padding: 0;
   }
+}
+/* custom styles */
+
+.whatsapp-link {
+  font-size: 24px;
+  margin-top: 32px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.whatsapp-link p {
+  font-size: inherit;
+  margin-right: 10px;
+}
+
+.whatsapp-link:hover {
+  display: flex;
+}
+
+.bold-heading {
+  background: #fff;
+  font-size: 20px;
+  font-weight: 900;
+  margin-right: 10px;
+}
+.about-list p {
+  margin-bottom: 18px;
+  font-size: 16px;
 }
