--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -9234,7 +9234,6 @@ section.next-prog.section-padding {
 
 .whatsapp-link {
   font-size: 24px;
-  margin-top: 32px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -9300,3 +9299,29 @@ section.next-prog.section-padding {
     align-items: center;
 }
 
+.flex-col-what {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.flex-col-what {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flex-col-what p {
+  margin-top: 36px;
+  text-transform: capitalize;
+  font-size: 32px;
+  color: #fff;
+  font-weight: 900;
+}
+
+.flex-col-what .cont-info {
+  display: flex;
+  align-items: center;
+  gap: 28px;
+  justify-content: center;
+}
